--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,7 +1,7 @@
 .news-card {
   max-height: 576px;
   height: 100%;
-  max-width: 400px;
+  max-width: 32.4%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -12,11 +12,11 @@
   overflow: hidden;
   position: relative;
   box-shadow: none;
-  transition: box-shadow .2s linear;
+  transition: box-shadow 0.2s linear;
   cursor: pointer;
 }
 .news-card:hover {
-    box-shadow: 0px 20px 50px 10px rgba(8,29,45,0.1);
+  box-shadow: 0px 20px 50px 10px rgba(8, 29, 45, 0.1);
 }
 .news-card__button {
   width: 40px;
@@ -36,6 +36,7 @@
   max-height: 272px;
 }
 .news-card__info {
+  background-color: #fff;
   padding: 20px 24px 24px 24px;
 }
 .news-card__date {
@@ -57,7 +58,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-height: 110px;
-  
 }
 .news-card__source {
   font-size: 16px;
@@ -67,17 +67,18 @@
   letter-spacing: 0.4px;
 }
 .news-card__reminder {
-    position: absolute;
-    width: 182px;
-    height: 40px;
-    font-size: 12px;
-    line-height: 14px;
-    display: flex;
-    background-color: #fff;
-    right: 17.25%;
+  position: absolute;
+  width: 182px;
+  height: 40px;
+  font-size: 12px;
+  line-height: 14px;
+  display: flex;
+  background-color: #fff;
+  right: 17.25%;
 }
+
 .button-style {
-    border: none;
+  border: none;
   height: 40px;
   border-radius: 8px;
   position: absolute;
@@ -88,4 +89,19 @@
   align-items: center;
   cursor: inherit;
   background-color: #fff;
+}
+.news-card__keyword {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  position: absolute;
+  font-size: 14px;
+  line-height: 24px;
+  padding: 0 22px;
+  left: 6%;
+}
+.news-card__trash {
+  opacity: .4;
+}
+.news-card__trash:hover {
+  opacity: 1;
 }
