--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,6 +3,9 @@
   max-width: 1440px;
   margin: 0 auto;
   min-height: 576px;
+
+}
+.app__background {
   background-image: url(../../images/main-bg.png);
   background-position-x: center;
   background-repeat: no-repeat;
