--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,6 +15,7 @@
     line-height: 24px;
     cursor: pointer;
 }
-.header_color_black {
+.header_black {
     color: #000;
+    box-shadow: inset 0px -1px 0px #D1D2D6;
 }
