--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,24 +1,34 @@
 .navigation {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 24px;
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
 }
 .navigation__page-button {
-    padding: 0 20px;
-    min-width: 68px;
-    height: 79px;
-    color: inherit;
-    outline: none;
-    background-color: transparent;
-    border: none;
-    border-bottom: 3px solid transparent;
-    transition: border .3s ease;
+  padding: 0 20px;
+  min-width: 68px;
+  height: 79px;
+  color: inherit;
+  outline: none;
+  background-color: transparent;
+  border: none;
+  border-bottom: 3px solid transparent;
+  transition: border 0.3s ease;
+  cursor: pointer;
 }
-.navigation__page-button:hover {
-    cursor: pointer;
-    border-bottom: 3px solid #fff;
+.navigation_main_active {
+  border-bottom: 3px solid #fff;
+}
+.navigation_path_inactive {
+  color: #b6bcbf;
+}
+.navigation_path_inactive:hover {
+  color: #fff;
+}
+.navigation_path_active {
+  color: #1a1b22;
+  border-bottom: 3px solid #1a1b22;
 }
