--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,24 +1,16 @@
-.circle-preloader {
-	display: block;
-	width: 50px;
-	height: 50px;
-	border: 4px solid #444;
-	border-bottom-color: #888;
-	
-	border-radius: 50%;
-	
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	margin: auto;
-	
-	animation: spin .75s infinite linear;
+.preloader {
+  display: block;
+  width: 74px;
+  height: 74px;
+  border: 1px solid #1A1B22;
+  border-bottom-color: #D1D2D6;
+  border-radius: 50%;
+  animation: spin 0.75s infinite linear;
+  margin-bottom: 24px;
 }
 
 @keyframes spin {
-	100% {
-		transform: rotate(360deg);
-	}
+  100% {
+    transform: rotate(360deg);
+  }
 }
