--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -29,3 +29,38 @@
     line-height: 24px;
     margin: 24px 0 0 0;
 }
+@media screen and (max-width: 768px) {
+  .about {
+padding: 40px 40px 61px 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about__image {
+    margin-top: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about__text-container {
+    padding: 0 0 0 32px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about__title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about__text {
+    margin-top: 16px;
+  }
+  .about__text:nth-last-child(1) {
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about__image {
+     max-width: 232px;
+     width: 100%;
+  }
+}
