--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,3 +19,11 @@
     color: #000;
     box-shadow: inset 0px -1px 0px #D1D2D6;
 }
+
+@media screen and (max-width: 768px) {
+    .header {
+        min-height: 65px;
+        padding: 0 40px;
+    }
+}
+
