--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -32,3 +32,10 @@
   color: #1a1b22;
   border-bottom: 3px solid #1a1b22;
 }
+@media screen and (max-width: 768px) {
+    .navigation__page-button {
+     font-size: 16px;
+     line-height: 24px;
+     height: 65px;  
+    }
+}
