--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -35,3 +35,27 @@
 .news-card-list__button:hover {
   background-color: #e8e8e8;
 }
+
+@media screen and (max-width: 768px) {
+  .news-card-list {
+      padding: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .news-card-list__container {
+      margin: 32px 0;
+      gap: 8px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .news-card-list__title {
+     font-size: 30px;
+     line-height: 34px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .news-card-list__button {
+    max-width: 240px;
+    height: 56px;
+  }
+}
