--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -13,6 +13,7 @@
   line-height: 46px;
   max-width: 530px;
   margin: 28px 0 30px 0;
+  font-weight: 400;
 }
 .saved-news-header__text {
     margin: 0;
@@ -20,3 +21,21 @@
 .saved-news-header__text_bold {
   font-weight: 700;
 }
+@media screen and (max-width: 768px) {
+    .saved-news-header {
+      padding: 24px 40px 32px 40px;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .saved-news-header__subtitle {
+     font-size: 14px;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .saved-news-header__title {
+     margin: 16px 0;
+     font-size: 30px;
+     line-height: 34px;
+     max-width: 336px;
+    }
+  }
