--- a/src/components/HeaderButton/HeaderButton.css
+++ b/src/components/HeaderButton/HeaderButton.css
@@ -1,36 +1,44 @@
 .header-button {
-    font-size: 18px;
-    line-height: 24px;
-    outline: none;
-    background-color: transparent;
-    color: inherit;
-    cursor: pointer;
-    border: 1px solid #fff;
-    border-radius: 100px;
-    display: flex;
-    align-items: center;
-    height: 48px;
-    padding: 12px 19px;
-    margin-left: 20px;
+  font-size: 18px;
+  line-height: 24px;
+  outline: none;
+  background-color: transparent;
+  color: inherit;
+  cursor: pointer;
+  border: 1px solid #fff;
+  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  height: 48px;
+  padding: 12px 19px;
+  margin-left: 20px;
 }
 .header-button_black {
-    border: 1px solid #D1D2D6;
-    transition: border .2s linear;
+  border: 1px solid #d1d2d6;
+  transition: border 0.2s linear;
 }
-.header-button_black:hover{
-    border: 1px solid #1A1B22;
+.header-button_black:hover {
+  border: 1px solid #1a1b22;
 }
 .header-button__user-name {
-    margin-right: 19px;
+  margin-right: 19px;
 }
 .header-button__signin {
-    width: 150px;
-    margin-right: 0;
+  width: 150px;
+  margin-right: 0;
 }
 @media screen and (max-width: 768px) {
-    .header-button {
-       font-size: 16px;
-       height: 40px;
-       padding: 8px 12px;
-    }
+  .header-button {
+    font-size: 16px;
+    height: 40px;
+    padding: 8px 12px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header-button {
+    width: 100%;
+    margin: 0;
+    justify-content: center;
+    margin-top: 22px;
+  }
 }
