--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -64,3 +64,27 @@ padding: 40px 40px 61px 40px;
      width: 100%;
   }
 }
+@media screen and (max-width: 600px) {
+  .about {
+    flex-direction: column;
+padding: 32px 16px 128px 16px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .about__text-container {
+   padding: 0;
+  }
+}
+@media screen and (max-width: 600px) {
+  .about__title {
+    margin: 24px 0 16px 0;
+  }
+}
+@media screen and (max-width: 600px) {
+  .about__image {
+    margin: 0 auto;
+    max-width: fit-content;
+    width: 272px;
+    height: 272px;
+  }
+}
