--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,4 @@
 .app {
-  box-sizing: border-box;
   max-width: 1440px;
   margin: 0 auto;
   min-height: 576px;
@@ -9,4 +8,9 @@
   background-image: url(../../images/main-bg.png);
   background-position-x: center;
   background-repeat: no-repeat;
+}
+@media screen and (max-width: 600px) {
+  .app {
+    width: 100%;
+  }
 }
