--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -18,7 +18,6 @@
 .footer__link {
   text-decoration: none;
   color: #1a1b22;
-  margin-right: 30px;
   font-size: 18px;
   line-height: 24px;
   opacity: 1;
@@ -30,22 +29,70 @@
 .footer__link-social {
   width: 20px;
   height: 20px;
-  margin: 0 0 0 26px;
 }
-
+.footer__navigation {
+  display: flex;
+  width: 55%;
+  justify-content: flex-end;
+}
+.footer__text-link-box {
+  display: flex;
+  justify-content: space-between;
+  max-width: 304px;
+  width: 100%;
+  margin-right: 40px;
+}
+.footer__social-box {
+  width: 66px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__link-box {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
 @media screen and (max-width: 768px) {
   .footer {
     padding: 0 40px;
   }
 }
-
 @media screen and (max-width: 768px) {
-  .footer__link {
-    margin-right: 20px;
+  .footer__text-link-box {
+    margin-right: 26px;
+    max-width: 264px;
   }
 }
-@media screen and (max-width: 768px) {
-  .footer__link-social {
-    margin-left: 0;
+@media screen and (max-width: 600px) {
+  .footer {
+    height: 176px;
+    padding: 20px 16px 22px 16px;
+    flex-direction: column;
   }
 }
+@media screen and (max-width: 600px) {
+  .footer__link-box {
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 600px) {
+  .footer__text {
+    max-width: 288px;
+    width: 100%;
+    order: 3;
+  }
+}
+@media screen and (max-width: 600px) {
+  .footer__navigation {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 600px) {
+    .footer__text-link-box {
+     flex-direction: column;
+     max-width: 200px;
+     margin: 0;
+     height: 72px;
+     justify-content: space-between;
+    }
+  }
