--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -29,6 +29,7 @@
 @media screen and (max-width: 768px) {
   .main__form-box {
      max-width: 448px;
+     padding: 0 16px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -40,5 +41,15 @@
 @media screen and (max-width: 768px) {
   .main__subtitle {
      margin: 16px 0 48px 0;
+  }
+}
+@media screen and (max-width: 600px) {
+  .main__form-box {
+     margin: 30px auto 32px auto;
+  }
+}
+@media screen and (max-width: 600px) {
+  .main__subtitle {
+     margin: 16px 0 122px 0;
   }
 }
