--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -32,10 +32,43 @@
   color: #1a1b22;
   border-bottom: 3px solid #1a1b22;
 }
+.navigation_background_light {
+    background-color: #fff;
+}
+.navigation_background_dark {
+    background-color: #1a1b22;
+}
 @media screen and (max-width: 768px) {
-    .navigation__page-button {
-     font-size: 16px;
-     line-height: 24px;
-     height: 65px;  
-    }
+  .navigation__page-button {
+    font-size: 16px;
+    line-height: 24px;
+    height: 65px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .navigation {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 64px;
+    padding: 16px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .navigation_opened {
+    display: flex;
+  }
+}
+@media screen and (max-width: 600px) {
+  .navigation__page-button {
+    width: 100%;
+    text-align: start;
+    padding: 0;
+    font-size: 18px;
+    line-height: 56px;
+    height: auto;
+    border: none;
+  }
 }
