--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -16,6 +16,7 @@
   font-size: 40px;
   line-height: 46px;
   margin: 0;
+  font-weight: 400;
 }
 .news-card-list__button {
   border-radius: 80px;
@@ -57,5 +58,23 @@
   .news-card-list__button {
     max-width: 240px;
     height: 56px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .news-card-list {
+   padding: 32px 16px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .news-card-list__container {
+    margin: 58px 0 21px 0;
+    flex-direction: column;
+   align-items: center;
+   gap: 10px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .news-card-list__button {
+    max-width: 100%;
   }
 }
