--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -39,3 +39,8 @@
      max-width: 336px;
     }
   }
+  @media screen and (max-width: 600px) {
+    .saved-news-header {
+      padding: 10px 16px 32px 16px;
+    }
+  }
