--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,7 @@
 .about {
   display: flex;
   padding: 80px 106px;
-  color:  #1A1B22;
+  color: #1a1b22;
 }
 .about__image {
   max-width: 464px;
@@ -12,26 +12,26 @@
   object-position: center;
 }
 .about__text-container {
-    padding: 50px 0 0 56px;
-    max-width: 600px;
+  padding: 50px 0 0 56px;
+  max-width: 600px;
 }
 .about__title {
-    font-family: 'Roboto Slav', sans-serif;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 46px;
-    margin: 0;
+  font-family: "Roboto Slav", sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 46px;
+  margin: 0;
 }
 .about__text {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-    margin: 24px 0 0 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  margin: 24px 0 0 0;
 }
 @media screen and (max-width: 768px) {
   .about {
-padding: 40px 40px 61px 40px;
+    padding: 40px 40px 61px 40px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -60,19 +60,19 @@ padding: 40px 40px 61px 40px;
 }
 @media screen and (max-width: 768px) {
   .about__image {
-     max-width: 232px;
-     width: 100%;
+    max-width: 232px;
+    width: 100%;
   }
 }
 @media screen and (max-width: 600px) {
   .about {
     flex-direction: column;
-padding: 32px 16px 128px 16px;
+    padding: 32px 16px 128px 16px;
   }
 }
 @media screen and (max-width: 600px) {
   .about__text-container {
-   padding: 0;
+    padding: 0;
   }
 }
 @media screen and (max-width: 600px) {
