--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -2,8 +2,8 @@
   display: block;
   width: 74px;
   height: 74px;
-  border: 1px solid #1A1B22;
-  border-bottom-color: #D1D2D6;
+  border: 1px solid #1a1b22;
+  border-bottom-color: #d1d2d6;
   border-radius: 50%;
   animation: spin 0.75s infinite linear;
   margin-bottom: 24px;
