fixed issues after review

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   color: #fff;
-  padding: 0 104px;
+  padding: 0 7.2%;
   z-index: 10;
 }
 .header__site-name {
