--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -2,14 +2,14 @@
   color: #1a1b22;
   display: flex;
   flex-direction: column;
-  padding: 80px 104px;
+  padding: 80px 7.2%;
   background-color: #f5f6f7;
   position: relative;
 }
 .news-card-list__container {
   display: flex;
   gap: 16px;
-  margin: 64px auto;
+  margin: 64px auto 48px auto;
 }
 .news-card-list__title {
   font-family: "Roboto Slab", sans-serif;
