--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -1,18 +1,21 @@
-.saved-news__cards {
-  color: #1a1b22;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  padding: 62px 102px;
+.saved-news__content {
+  padding: 62px 7.2% 46px 7.2%;
   background-color: #f5f6f7;
+}
+.saved-news__cards {
+  display: flex;
+  gap: 1.4%;
+  margin: 0 auto;
+  flex-wrap: wrap;
 }
 @media screen and (max-width: 768px) {
   .saved-news__cards {
+    justify-content: center;
     gap: 8px;
     padding: 32px 39px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .saved-news__cards {
     padding: 24px 16px 13px 16px;
     gap: 11px;
