--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -1,5 +1,5 @@
 .saved-news-header {
-  padding: 40px 0 56px 104px;
+  padding: 40px 0 56px 7.2%;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   line-height: 24px;
