--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
   height: 80px;
   display: flex;
   align-items: center;
-  padding: 0 106px;
+  padding: 0 7.2%;
   justify-content: space-between;
 }
 .footer__text {
