--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -17,6 +17,10 @@
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding: 10px 0;
+  transition: border-bottom .3s linear;
+}
+.form__input:focus {
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
 }
 .form__input::placeholder {
   font-size: 14px;
