--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -14,6 +14,7 @@
   box-shadow: none;
   transition: box-shadow 0.2s linear;
   cursor: pointer;
+  margin-bottom: 16px;
 }
 .news-card:hover {
   box-shadow: 0px 20px 50px 10px rgba(8, 29, 45, 0.1);
@@ -48,7 +49,7 @@
 .news-card__title {
   font-size: 26px;
   line-height: 30px;
-  margin: 12px 0 16px 0;
+  margin: 12px 0 46px 0;
 }
 .news-card__text {
   font-family: "Roboto", sans-serif;
@@ -73,17 +74,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.news-card__reminder {
-  position: absolute;
-  width: 182px;
-  height: 40px;
-  font-size: 12px;
-  line-height: 14px;
-  display: flex;
-  background-color: #fff;
-  right: 17.25%;
-}
-
 .button-style {
   border: none;
   height: 40px;
@@ -97,6 +87,17 @@
   cursor: inherit;
   background-color: #fff;
 }
+.news-card__reminder {
+  display: none;
+  position: absolute;
+  width: 182px;
+  height: 40px;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: #fff;
+  right: 17.25%;
+  cursor: default;
+}
 .news-card__keyword {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -109,10 +110,12 @@
 .news-card__trash {
   opacity: 0.4;
 }
-.news-card__trash:hover {
+.news-card__button:hover .news-card__trash {
   opacity: 1;
 }
-
+.news-card__button:hover + .news-card__reminder {
+  display: flex;
+}
 @media screen and (max-width: 768px) {
   .news-card {
     max-width: 224px;
