--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -49,7 +49,7 @@
 .news-card__title {
   font-size: 26px;
   line-height: 30px;
-  margin: 12px 0 46px 0;
+  margin: 12px 0 10px 0;
 }
 .news-card__text {
   font-family: "Roboto", sans-serif;
@@ -116,9 +116,16 @@
 .news-card__button:hover + .news-card__reminder {
   display: flex;
 }
+@media screen and (max-width: 900px) {
+  .news-card__reminder {
+    right: 24%;
+    width: 70%;
+  }
+}
 @media screen and (max-width: 768px) {
   .news-card {
     max-width: 224px;
+    min-width: 200px;
     width: 100%;
     max-height: 430px;
   }
@@ -152,12 +159,7 @@
     top: 2%;
   }
 }
-@media screen and (max-width: 768px) {
-  .news-card__reminder {
-    right: 3.5%;
-    top: 13%;
-  }
-}
+
 @media screen and (max-width: 768px) {
   .news-card__keyword {
     left: 3.5%;
@@ -166,10 +168,12 @@
 
 @media screen and (max-width: 600px) {
   .news-card {
-    margin: 0 auto;
-    max-width: 400px;
-    min-width: 288px;
+    margin: 0 auto 15px auto;
+    max-width: 288px;
     max-height: 440px;
+  }
+  .news-card:last-of-type {
+    margin-bottom: 0;
   }
 }
 @media screen and (max-width: 600px) {
@@ -183,5 +187,11 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+  }
+}
+@media screen and (max-width: 900px) {
+  .news-card__reminder {
+    right: 20%;
+    width: 75%;
   }
 }
