--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,6 +36,7 @@
   margin-bottom: 4px;
   z-index: 10;
   transition: all 0.5s ease-in-out;
+  cursor: pointer;
 }
 .header__popup-button::after {
   content: "";
