--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -67,7 +67,8 @@
 @media screen and (max-width: 600px) {
   .about {
     flex-direction: column;
-    padding: 32px 16px 128px 16px;
+    padding: 32px 16px 28px 16px;
+    margin-top: 100px;
   }
 }
 @media screen and (max-width: 600px) {
